spacing fixes

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -226,6 +226,7 @@ h2 {
 }
 .work-hero-title {
     font-size: clamp(56px, 12vw, 232px);
+    margin-top: 20px;
 }
 .constrained {
     max-width: 1400px;
@@ -234,11 +235,11 @@ h2 {
 }
 
 .margin-top-auto {
-    margin-top: auto;
+    margin-top: 20px;
 }
 
 .margin-bottom-auto {
-    margin-bottom: auto;
+    margin-bottom: 20px;
 }
 
 .centered {
@@ -440,7 +441,6 @@ a:visited .button:hover,
 }
 
 .section.hero-section {
-    min-height: 80vh;
     padding: 0px !important;
 }
 
@@ -702,6 +702,16 @@ a.logo-link-home:focus-within svg {
     }
 }
 @media(min-width: 1000px) {
+    .margin-top-auto {
+        margin-top: auto;
+    }
+    
+    .margin-bottom-auto {
+        margin-bottom: auto;
+    }
+    .section.hero-section {
+        min-height: 80vh;
+    }
     .adult-swim-section {
         background: url(../img/adult-swim-background.webp) no-repeat bottom center #010101;
         background-size: 100%;
